added number dots

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   height: 97vh;
 }
 
@@ -28,6 +29,62 @@ body {
 .clockFill.secondFill {
   width: 20vmin;
   height: 20vmin;
+}
+
+.clockNum {
+  background-color: black;
+  width: 3vmin;
+  height: 3vmin;
+  position: relative;
+  border-radius: 50%;
+}
+
+.clockNum.clockNum-1 {
+  top: -28.75vmin;
+}
+
+.clockNum.clockNum-2 {
+  top: -23.5vmin;
+  right: -25vmin;
+}
+
+.clockNum.clockNum-3 {
+  top: -5.5vmin;
+  right: -40.5vmin;
+}
+
+.clockNum.clockNum-4 {
+  top: 17.5vmin;
+  right: -40.25vmin;
+}
+
+.clockNum.clockNum-5 {
+  top: 35.5vmin;
+  right: -25vmin;
+}
+
+.clockNum.clockNum-6 {
+  top: 40.75vmin;
+}
+
+.clockNum.clockNum-7 {
+  top: 29.5vmin;
+  right: 25vmin;
+}
+
+.clockNum.clockNum-8 {
+  top: 5.5vmin;
+  right: 40.25vmin;
+}
+
+.clockNum.clockNum-9 {
+  top: -23.5vmin;
+  right: 40vmin;
+}
+
+.clockNum.clockNum-10 {
+  top: -47.5vmin;
+  right: 25vmin;
 }
 
 .hourFill-0 {
