--- a/style.sass
+++ b/style.sass
@@ -2,16 +2,24 @@
 $hourColor:       #005b96
 $minuteColor:     #6497b1
 $secondColor:     #b3cde0
+$numColor:        black
 $backgroundColor: #011f4b
+
 
 //CSS
 body
   background-color: $backgroundColor
+//  background image used for testing
+//  background-image: url(background.png)
+//  background-repeat: no-repeat
+//  background-size: 85%
+//  background-position: center
 
 #container
   display: flex
   justify-content: center
   align-items: center
+  flex-direction: column
   height: 97vh
 
 .clockFill
@@ -30,6 +38,51 @@ body
 .clockFill.secondFill
   width: 20vmin
   height: 20vmin
+
+.clockNum
+  background-color: $numColor
+  width: 3vmin
+  height: 3vmin
+  position: relative
+  border-radius: 50%
+
+.clockNum.clockNum-1
+  top: -28.75vmin
+
+.clockNum.clockNum-2
+  top: -23.5vmin
+  right: -25vmin
+
+.clockNum.clockNum-3
+  top: -5.5vmin
+  right: -40.5vmin
+
+.clockNum.clockNum-4
+  top: 17.5vmin
+  right: -40.25vmin
+
+.clockNum.clockNum-5
+  top: 35.5vmin
+  right: -25vmin
+
+.clockNum.clockNum-6
+  top: 40.75vmin
+
+.clockNum.clockNum-7
+  top: 29.5vmin
+  right: 25vmin
+  
+.clockNum.clockNum-8
+  top: 5.5vmin
+  right: 40.25vmin
+  
+.clockNum.clockNum-9
+  top: -23.5vmin
+  right: 40vmin
+
+.clockNum.clockNum-10
+  top: -47.5vmin
+  right: 25vmin
 
 
 //Mixins
