update frame on page load

--- a/style.sass
+++ b/style.sass
@@ -5,7 +5,6 @@ $secondColor:     #b3cde0
 $numColor:        black
 $backgroundColor: #011f4b
 
-
 //CSS
 body
   background-color: $backgroundColor
@@ -45,6 +44,7 @@ body
   height: 3vmin
   position: relative
   border-radius: 50%
+  display: none
 
 .clockNum.clockNum-1
   top: -28.75vmin
